--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ body {
 /* Style the header */
 header {
   display: block;
-  padding: 30px;
+  padding: 20px;
   text-align: center;
   font-family: Algerian;
-  background-color: #566573;
+  background-color: #0033FF;
   font-size: 60px;
-  color: #F39C12;
+  color: #00FFFF ;
  
   text-decoration: none;
 }
@@ -62,7 +62,7 @@ article {
   float: left;
   padding: 10px;
   width: 70%;
-  background-color: #EBF5FB;
+  background-color: #D0D3D4;
   /* height: 300px;  only for demonstration, should be removed */
 }
 
@@ -76,8 +76,9 @@ section:after {
 /* Style the footer */
 footer {
   font-family: Sagona Book;
-  background-color: #E74C3C;
-  padding: 5px;
+  background-color: #FF0000;
+  padding: 3px;
+  font-size: 25px;
   text-align: center;
   color: white;
 }
