--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ footer {
   font-family: Sagona Book;
   background-color: #FF0000;
   padding: 3px;
-  font-size: 25px;
+  font-size: 20px;
   text-align: center;
   color: white;
 }
@@ -99,7 +99,7 @@ footer {
   float: left;
   width: 50%;
   padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
+  height: auto; /* Should be removed. Only for demonstration */
 }
 
 /* Clear floats after the columns */
