--- a/style1.css
+++ b/style1.css
@@ -3,12 +3,12 @@
 }
 
 body {
-  font-family: Algerian, Elephant, sans-serif;
+  font-family: Cooper Black, Elephant, sans-serif;
 }
 
 /* Style the header */
 header {
-  font-family: Algerian;
+  font-family: Cooper Black;
   background-color: #566573;
   padding: 25px;
   text-align: center;
